[package]
name = "nipaa-r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
binrw = "0.10.0"
deflate = "1.0.0"
dylib-mitm = { git = "https://github.com/nikvoid/dylib-mitm", version = "0.1.0" }
encoding_rs = "0.8.31"
