[package]
name = "nipaa-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
binrw = "0.10.0"
clap = { version = "4.1.4", features = ["derive"] }
encoding_rs = "0.8.31"
miniz_oxide = "0.6.2"
